--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
    <!-- SWIPER -->
-   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
+   <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
+   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
    <!-- ScrollMagic -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
       integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
@@ -606,8 +605,10 @@
 
          <img src="./images/find_store_texture1.png" alt="" class="texture1" />
          <img src="./images/find_store_texture2.png" alt="" class="texture2" />
-         <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1 back-to-position to-right delay-0" />
-         <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2 back-to-position to-right delay-1" />
+         <img src="./images/find_store_picture1.jpg" alt=""
+            class="picture picture1 back-to-position to-right delay-0" />
+         <img src="./images/find_store_picture2.jpg" alt=""
+            class="picture picture2 back-to-position to-right delay-1" />
 
          <div class="text-group">
             <img src="./images/find_store_text1.png" alt="" class="title back-to-position to-left delay-0" />
@@ -615,6 +616,57 @@
             <div class="more back-to-position to-left delay-2">
                <a href="javascript:void(0)" class="btn">매장찾기</a>
             </div>
+         </div>
+
+      </div>
+   </section>
+
+   <!-- AWARDS -->
+   <section class="awards">
+      <div class="inner">
+
+         <div class="swiper-container">
+
+            <div class="swiper-wrapper">
+
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide1.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide2.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide3.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide4.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide5.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide6.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide7.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide8.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide9.jpg" alt="">
+               </div>
+               <div class="swiper-slide">
+                  <img src="./images/awards_slide10.jpg" alt="">
+               </div>
+            </div>
+         </div>
+
+         <div class="swiper-prev">
+            <div class="material-icons">aroow_back</div>
+         </div>
+         <div class="swiper-next">
+            <div class="material-icons">arrow_forward</div>
          </div>
 
       </div>
